--- a/linux/.bashrc.md
+++ b/linux/.bashrc.md
@@ -1,3 +1,9 @@
+修改前出现的错误：
+
+make：xx：command not found 
+
+make：。。。Error 127
+
 在.bashrc中添加环境变量路径并用source ~/.bashrc执行
 
 若出现bash: .bashrc: command not found错误，可能为.bashrc文件第一行 # .bashrc 少了一个#
